# proscia-ai-tools

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml
concentriq_embeddings_client/: client.py
notebooks/: .secrets.baseline  annotation-based-regions-of-interest.ipynb  annotations.ipynb  clustering.ipynb  regions-of-interest.ipynb  segmentation.ipynb  zero-shot-classification.ipynb
proscia_ai_tools/: annotations.py  client.py  concentriqlsclient.py  utils.py
proscia_ai_tools/concentriq_embeddings_client/: README.md  client.py  models.py
tests/: test_annotations.py  test_client.py  test_concentriqlsclient.py  test_utils.py
utils/: annotations.py  client.py  concentriqlsclient.py  utils.py
