[tool.poetry]
name = "proscia-ai-tools"
version = "0.0.1"
description = "This is a software contains python code to interact with the Proscia Foundation Embedder API."
authors = ["Proscia AI Team <ai_team@proscia.com>"]
packages = [
  {include = "proscia_ai_tools"},
]

[tool.poetry.dependencies]
imageio = "^2.34"
python = "^3.10"
pydantic = "^2.7.0"
requests = "^2.31.0"
pytest-mock = "^3.14.0"
pydantic-xml = "^2.13.1"
pydantic-extra-types = "^2.10.0"
transformers = "^4.51.3"
opencv-python-headless = "^4.9.0"
pandas = "2.2.2"
numpy = "2.0.2"
safetensors = "^0.4.2"
torch = "2.6.0"
ipykernel = "6.17.1"
ipywidgets = "7.7.1"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.1"
umap-learn = "^0.5.5"
tqdm = "^4.66.2"
notebook = "6.5.7"
h11 = "^0.16.0"
jupyter-client = "<8.0,>=5.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
requests = "^2.31"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["proscia_foundation_embedder_python_sdk"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["proscia_foundation_embedder_python_sdk"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
